--- a/docker/nginx/root/etc/nginx/nginx.conf
+++ b/docker/nginx/root/etc/nginx/nginx.conf
@@ -13,6 +13,7 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
