Updating to use our hub spawning methods.

--- a/docker/jupyterhub/Dockerfile
+++ b/docker/jupyterhub/Dockerfile
@@ -4,12 +4,15 @@ ENV BITBUCKET_CLIENT_ID=github_id BITBUCKET_CLIENT_SECRET=github_secret \
   OAUTH_CALLBACK_URL=https://example.com/hub/oauth_callback \
   CONFIGPROXY_AUTH_TOKEN=super-secret DOCKER_HOST=tcp://141.142.234.27:2375
 
+RUN apt-get install -y libpq-dev mercurial
+
 VOLUME ["/srv/jupyterhub/ssl", "/var/run/jupyterhub"]
 EXPOSE 443
 
 RUN pip3 install docker-py
 RUN pip3 install git+git://github.com/jupyter/dockerspawner.git
 RUN pip3 install git+git://github.com/Xarthisius/oauthenticator.git@bitbucket
+RUN pip3 install hg+https://bitbucket.org/MatthewTurk/ythubspawner
 
 # set working directory to the jupyterhub directory
 WORKDIR /srv/jupyterhub
