--- a/docker/jupyterhub/Dockerfile
+++ b/docker/jupyterhub/Dockerfile
@@ -7,9 +7,9 @@ ENV BITBUCKET_CLIENT_ID=github_id BITBUCKET_CLIENT_SECRET=github_secret \
 VOLUME ["/srv/jupyterhub/ssl", "/var/run/jupyterhub"]
 EXPOSE 443
 
-RUN pip3 install docker-py
+RUN pip3 install docker-py==1.2.3
 RUN pip3 install git+git://github.com/jupyter/dockerspawner.git
-RUN pip3 install git+git://github.com/Xarthisius/oauthenticator.git@bitbucket
+RUN pip3 install git+git://github.com/jupyter/oauthenticator.git
 
 # set working directory to the jupyterhub directory
 WORKDIR /srv/jupyterhub
