--- a/docker/jupyterhub/jupyterhub.conf
+++ b/docker/jupyterhub/jupyterhub.conf
@@ -18,3 +18,9 @@ command=/usr/local/bin/jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
 autostart = true
 autorestart = true
 redirect_stderr = true
+
+[program:cull]
+command=python /srv/jupyterhub/cull_idle_servers.py
+autostart = true
+autorestart = true
+redirect_stderr = true
