jupyterhub: minor fixes

--- a/docker/jupyterhub/jupyterhub.conf
+++ b/docker/jupyterhub/jupyterhub.conf
@@ -20,7 +20,7 @@ autorestart = true
 redirect_stderr = true
 
 [program:cull]
-command=python /srv/jupyterhub/cull_idle_servers.py
+command=python3 /srv/jupyterhub/cull_idle_servers.py
 autostart = true
 autorestart = true
 redirect_stderr = true
