--- a/docker/jupyter/singleuser/envs/ytdev.yaml
+++ b/docker/jupyter/singleuser/envs/ytdev.yaml
@@ -10,6 +10,8 @@ dependencies:
 - scipy
 - matplotlib
 - ipykernel
+- requests
 - pip:
+  - slacker
   - https://bitbucket.org/yt_analysis/yt/get/yt.tar.bz2
   - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
