--- a/docker/jupyter/singleuser/envs/ytstable.yaml
+++ b/docker/jupyter/singleuser/envs/ytstable.yaml
@@ -2,5 +2,7 @@ dependencies:
 - ipython
 - ipykernel
 - yt
+- requests
 pip:
+   - slacker
    - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
