jupyter/singleuser: fix syntax

--- a/docker/jupyter/singleuser/envs/ytstable.yaml
+++ b/docker/jupyter/singleuser/envs/ytstable.yaml
@@ -3,6 +3,6 @@ dependencies:
 - ipykernel
 - yt
 - requests
-pip:
+- pip:
    - slacker
    - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
