jupyter/singleanonuser: update

--- a/docker/jupyter/singleanonuser/envs/ytstable.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytstable.yaml
@@ -6,6 +6,7 @@ dependencies:
 - cython
 - scipy
 - numexpr
+- ipywidgets
 - pip:
    - slacker
    - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
