--- a/docker/jupyter/singleanonuser/envs/ytdev.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytdev.yaml
@@ -13,9 +13,10 @@ dependencies:
 - requests
 - scipy
 - numexpr
+- ipywidgets
 - pip:
   - slacker
   - https://bitbucket.org/yt_analysis/yt/get/yt.tar.bz2
   - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
-  - https://github.com/scopatz/pyembree.git
+  - git+git://github.com/scopatz/pyembree.git
   - galanyl
