--- a/docker/jupyter/singleanonuser/envs/ytdev.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytdev.yaml
@@ -14,9 +14,11 @@ dependencies:
 - scipy
 - numexpr
 - ipywidgets
+- scikit-image
 - pip:
   - slacker
   - https://bitbucket.org/yt_analysis/yt/get/yt.tar.bz2
   - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
   - git+git://github.com/scopatz/pyembree.git
   - galanyl
+
