--- a/docker/jupyter/singleanonuser/envs/ytstable.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytstable.yaml
@@ -7,6 +7,7 @@ dependencies:
 - scipy
 - numexpr
 - ipywidgets
+- scikit-image
 - pip:
    - slacker
    - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
