conda_builder: Download java

--- a/docker/conda_builder/Dockerfile
+++ b/docker/conda_builder/Dockerfile
@@ -2,7 +2,13 @@ FROM centos:5
 
 RUN yum update -q -y && \
   yum install -y wget gcc gcc-c++ bzip2 openssh-server && \
-  adduser fido
+  cd /tmp && \
+  wget --no-cookies --no-check-certificate \
+    --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" \
+    "http://download.oracle.com/otn-pub/java/jdk/8u71-b15/jdk-8u71-linux-x64.rpm" && \
+  rpm -i jdk-8u71-linux-x64.rpm* && rm -rf jdk* && \
+  sed -ri 's/^session\s+required\s+pam_loginuid.so$/session optional pam_loginuid.so/' /etc/pam.d/sshd && \
+  adduser fido 
 
 RUN mkdir -p /var/log/supervisor
 
