--- a/docker/jupyter/singleanonuser/envs/ytdev.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytdev.yaml
@@ -1,24 +1,21 @@
+channels:
+   - http://use.yt/with_conda/
 dependencies:
 - h5py
 - numexpr
-- setuptools
 - numpy
-- sphinx
 - cython
-- nose
-- sympy
-- scipy
-- matplotlib
-- ipykernel
 - requests
 - scipy
-- numexpr
 - ipywidgets
+- ipykernel
 - scikit-image
+- pandas
+- yt
+- netcdf4
 - pip:
   - slacker
-  - https://bitbucket.org/yt_analysis/yt/get/yt.tar.bz2
   - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
-  - git+git://github.com/scopatz/pyembree.git
   - galanyl
-
+  - girder-client
+  - jupyter_cms
