--- a/docker/jupyter/singleanonuser/Dockerfile
+++ b/docker/jupyter/singleanonuser/Dockerfile
@@ -7,6 +7,10 @@ COPY ./envs /tmp/
 COPY kernels.sh /tmp/kernels.sh
 RUN chmod +x /tmp/kernels.sh
 
+COPY ./config.tri /home/jovyan/.trident/config.tri
+RUN wget http://trident-project.org/data/ion_table/hm2012_hr.h5.gz -O /home/jovyan/.trident/hm2012_hr.h5.gz && \
+   gunzip /home/jovyan/.trident/hm2012_hr.h5.gz && chown jovyan -R /home/jovyan/.trident
+
 USER jovyan
 RUN /tmp/kernels.sh
 ADD ./logo.png /home/jovyan/.jupyter/custom/logo.png
