--- a/docker/jupyter/singleanonuser/envs/ytstable.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytstable.yaml
@@ -12,6 +12,7 @@ dependencies:
 - yt
 - netcdf4
 - astropy
+- icu
 - pip:
    - slacker
    - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
