--- a/docker/jupyter/singleanonuser/envs/ytdev.yaml
+++ b/docker/jupyter/singleanonuser/envs/ytdev.yaml
@@ -1,24 +1,16 @@
 channels:
    - http://use.yt/with_conda/
+   - conda-forge
 dependencies:
 - h5py
-- numexpr
-- numpy
-- cython
-- requests
-- scipy
-- ipywidgets
-- ipykernel
-- scikit-image
-- pandas
-- yt
-- astropy
 - netcdf4
-- icu
+- scipy
+- astropy
+- yt
+- pandas
+- ipywidgets
 - pip:
-  - slacker
   - https://bitbucket.org/data-exp-lab/dxl-tools/get/default.tar.bz2
-  - galanyl
   - girder-client
   - jupyter_cms
   - trident
