Migrate slackbot to github

--- a/docker/slackbot-fido/Dockerfile
+++ b/docker/slackbot-fido/Dockerfile
@@ -1,32 +1,8 @@
-FROM debian:sid
+FROM jfloff/alpine-python:2.7-onbuild
 
-RUN apt-get -qy update && \
-   apt-get -qyy install unzip curl python-requests python-websocket python-jenkins \
-     python-daemon python-yaml python-setuptools python-future mercurial python-hglib && \
-   apt-get clean && \
-   rm -rf /var/lib/apt/lists/*
+ADD ./plugins /srv/app/plugins
+ADD ./rtmbot.conf /srv/app/rtmbot.conf
 
-RUN cd /tmp && \
-   curl -LJO https://github.com/slackhq/python-slackclient/archive/master.zip && \
-   unzip python-slackclient-master.zip && \
-   cd python-slackclient-master && \
-   python setup.py install && \
-   cd /tmp && rm -rf /tmp/*
+WORKDIR /srv/app
 
-RUN cd /tmp && \
-  curl -LJO https://github.com/msiemens/tinydb/archive/master.zip && \
-  unzip tinydb-master.zip && \
-  cd tinydb-master && \
-  python setup.py install && \
-  cd /tmp && rm -rf /tmp/*
-
-RUN cd /tmp && \
-   curl -O https://codeload.github.com/Xarthisius/python-rtmbot/zip/master && \
-   unzip master
-
-ADD ./bb.py /tmp/python-rtmbot-master/plugins/bb.py
-ADD ./hgbb.py /tmp/python-rtmbot-master/plugins/hgbb.py
-ADD ./rtmbot.conf /tmp/python-rtmbot-master/rtmbot.conf
-
-WORKDIR /tmp/python-rtmbot-master
-CMD ["python", "rtmbot.py"]
+CMD rtmbot
