--- a/docker/slackbot-fido/Dockerfile
+++ b/docker/slackbot-fido/Dockerfile
@@ -1,5 +1,6 @@
 FROM jfloff/alpine-python:2.7-onbuild
 
+ADD ./build-requirements.txt /build-requirements.txt
 ADD ./plugins /srv/app/plugins
 ADD ./rtmbot.conf /srv/app/rtmbot.conf
 
